# tk_utils_core

./: LICENSE  NOTICE  README.md  pyproject.toml
docs/: c2f.gv
tests/: _utils.py  test_codeparsers.py  test_converters.py  test_decorators.py  test_mappings.py  test_messages.py  test_structs.py  test_system.py  test_validators.py  test_webtools.py
tests/assets/examples/: eg_module.py
tests/assets/toolkit/_dropbox/tookit.zip.tmp5/: readme.md
tk_utils_core/: __init__.py  _imports.py  codeparser.py  converters.py  decorators.py  defaults.py  defaults.toml  fstools.py  mappings.py  messages.py  options.py  pycharm.py  regexes.py  structs.py  system.py  validators.py  webtools.py
tk_utils_core/core/: __init__.py  _typing.py  constants.py  converters.py  mappings.py  structs.py  system.py  validators.py
tk_utils_core/core/codeparser/: _codeparser.py  _functions.py  _parso.py
tk_utils_core/core/fstools/: _fstools.py  safeio.py  walk.py
tk_utils_core/core/messages/: __init__.py  _dirtree.py  colorize.py  dirtree.py  errors.py  formatters.py  logtools.py
tk_utils_core/core/system/: _system.py  compress.py  modtools.py  runners.py  walk.py
tk_utils_core/core/webtools/: __init__.py  downloaders.py  github.py
tk_utils_core/fstools/: __init__.py  _fstools.py  _io.py  _walk.py
tk_utils_core/pycharm/: __init__.py  _pycharm.py
tk_utils_core/testing/: __init__.py  _doctests.py  _unittest.py  doctests_runner.py  unittest_runner.py
tk_utils_core/webtools/: _github.py  _webtools.py
